# plainlog

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  std_hello.py  zensical.toml
.github/workflows/: docs.yml  publish.yml  test.yml
LICENSES/: MIT.txt
benchmarks/: bench_stdlib_vs_plainlog.py  timeit_bench_log.py
docs/: api.md  base.md  comparison_to_stdlib.md  configuration.md  handlers.md  index.md  logger.md
scripts/: async_hello.py  data.py  hello.py  immod.py  perf.py  perf_std.py  perftest_tuple.py  std_hello.py  template_hello.py  test_multiprocessing.py
scripts/plainlog_extensions/: _rich_handler.py
src/plainlog/: __init__.py  __version__.py  _base.py  _defaults.py  _dev.py  _env.py  _file_handler.py  _frames.py  _logger.py  _recattrs.py  _rich_handler.py  _utils.py  configure.py  formatters.py  handlers.py  processors.py  std.py  warnings.py
tests/: __init__.py  _helper_new_at_module_level.py  conftest.py  helpers.py  test_bind.py  test_configure.py  test_dev.py  test_examples.py  test_formatters.py  test_frames.py  test_handlers.py  test_import.py  test_logger.py  test_processors.py  test_recattrs.py  test_std.py  test_utils.py  test_warnings.py
