[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plainlog"
description = 'Logging made simple and easy.'
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0 OR MIT"
license-files = ["LICENSES/*"]
keywords = []
authors = [{ name = "Wolfgang Langner", email = "tds333@mailbox.org" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: System :: Logging",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/tds333/plainlog#readme"
Issues = "https://github.com/tds333/plainlog/issues"
Source = "https://github.com/tds333/plainlog"

[tool.hatch.version]
path = "src/plainlog/__version__.py"

[tool.hatch.envs.default]
installer = "uv"
dependencies = ["pytest", "pytest-cov"]
[tool.hatch.envs.default.scripts]
tests = "pytest {args}"
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/plainlog --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["39", "310", "311", "312", "313"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["src/plainlog/__version__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
[tool.coverage.paths]
source = ["src"]


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
exclude = [".env", ".venv", "venv"]
line-length = 120
[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  # "I",  # isort
  "C", # flake8-comprehensions
  "B", # flake8-bugbear
]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
]

[tool.ty.rules]
#division-by-zero = "ignore"

[dependency-groups]
dev = ["hatch>=1.14.0", "pytest", "pytest-cov"]
#show-source = true
